cmake_minimum_required(VERSION 3.10)
project(avutil)

#TODO: configure avconfig and ffversion headers
set(AVUTIL_CONFIG_HEADER avconfig.h)
set(AVUTIL_FFVERSION_HEADER ffversion.h)

file(COPY ${AVUTIL_CONFIG_HEADER} DESTINATION ${CMAKE_BINARY_DIR}/include/libavutil)
file(COPY ${AVUTIL_FFVERSION_HEADER} DESTINATION ${CMAKE_BINARY_DIR}/include/libavutil)

list(APPEND AVUTIL_ALL_HEADERS samplefmt.h)
list(APPEND AVUTIL_ALL_HEADERS attributes.h)
list(APPEND AVUTIL_ALL_HEADERS avutil.h)
list(APPEND AVUTIL_ALL_HEADERS buffer.h)
list(APPEND AVUTIL_ALL_HEADERS dict.h)
list(APPEND AVUTIL_ALL_HEADERS frame.h)
list(APPEND AVUTIL_ALL_HEADERS log.h)
list(APPEND AVUTIL_ALL_HEADERS pixfmt.h)
list(APPEND AVUTIL_ALL_HEADERS rational.h)
list(APPEND AVUTIL_ALL_HEADERS avassert.h)
list(APPEND AVUTIL_ALL_HEADERS avstring.h)
list(APPEND AVUTIL_ALL_HEADERS bprint.h)
list(APPEND AVUTIL_ALL_HEADERS channel_layout.h)
list(APPEND AVUTIL_ALL_HEADERS imgutils.h)
list(APPEND AVUTIL_ALL_HEADERS mem.h)
list(APPEND AVUTIL_ALL_HEADERS opt.h)
list(APPEND AVUTIL_ALL_HEADERS thread.h)
list(APPEND AVUTIL_ALL_HEADERS common.h)
list(APPEND AVUTIL_ALL_HEADERS macros.h)
list(APPEND AVUTIL_ALL_HEADERS version.h)
list(APPEND AVUTIL_ALL_HEADERS error.h)
list(APPEND AVUTIL_ALL_HEADERS mathematics.h)
list(APPEND AVUTIL_ALL_HEADERS intfloat.h)
list(APPEND AVUTIL_ALL_HEADERS pixdesc.h)
list(APPEND AVUTIL_ALL_HEADERS hwcontext.h)
list(APPEND AVUTIL_ALL_HEADERS fifo.h)
list(APPEND AVUTIL_ALL_HEADERS internal.h)
list(APPEND AVUTIL_ALL_HEADERS intmath.h)
list(APPEND AVUTIL_ALL_HEADERS timer.h)
list(APPEND AVUTIL_ALL_HEADERS libm.h)
list(APPEND AVUTIL_ALL_HEADERS intreadwrite.h)
list(APPEND AVUTIL_ALL_HEADERS bswap.h)
list(APPEND AVUTIL_ALL_HEADERS display.h)
list(APPEND AVUTIL_ALL_HEADERS stereo3d.h)
list(APPEND AVUTIL_ALL_HEADERS video_enc_params.h)
list(APPEND AVUTIL_ALL_HEADERS mem_internal.h)
list(APPEND AVUTIL_ALL_HEADERS reverse.h)
list(APPEND AVUTIL_ALL_HEADERS film_grain_params.h)
list(APPEND AVUTIL_ALL_HEADERS timecode.h)
list(APPEND AVUTIL_ALL_HEADERS qsort.h)

foreach(AVUTIL_HEADER ${AVUTIL_ALL_HEADERS})
    file(COPY ${AVUTIL_HEADER} DESTINATION ${CMAKE_BINARY_DIR}/include/libavutil/)
endforeach()

list(APPEND AVUTIL_SOURCES samplefmt.c)
list(APPEND AVUTIL_SOURCES utils.c)
list(APPEND AVUTIL_SOURCES buffer.c)
list(APPEND AVUTIL_SOURCES dict.c)
list(APPEND AVUTIL_SOURCES frame.c)
list(APPEND AVUTIL_SOURCES log.c)
list(APPEND AVUTIL_SOURCES rational.c)
list(APPEND AVUTIL_SOURCES avstring.c)
list(APPEND AVUTIL_SOURCES bprint.c)
list(APPEND AVUTIL_SOURCES channel_layout.c)
list(APPEND AVUTIL_SOURCES imgutils.c)
list(APPEND AVUTIL_SOURCES mem.c)
list(APPEND AVUTIL_SOURCES opt.c)
list(APPEND AVUTIL_SOURCES error.c)
list(APPEND AVUTIL_SOURCES mathematics.c)
list(APPEND AVUTIL_SOURCES pixdesc.c)
list(APPEND AVUTIL_SOURCES hwcontext.c)
list(APPEND AVUTIL_SOURCES fifo.c)
list(APPEND AVUTIL_SOURCES intmath.c)
list(APPEND AVUTIL_SOURCES log2_tab.c)
list(APPEND AVUTIL_SOURCES eval.c)
list(APPEND AVUTIL_SOURCES parseutils.c)
list(APPEND AVUTIL_SOURCES reverse.c)
list(APPEND AVUTIL_SOURCES time.c)
list(APPEND AVUTIL_SOURCES random_seed.c)
list(APPEND AVUTIL_SOURCES sha.c)
list(APPEND AVUTIL_SOURCES display.c)
list(APPEND AVUTIL_SOURCES stereo3d.c)
list(APPEND AVUTIL_SOURCES reverse.c)
list(APPEND AVUTIL_SOURCES video_enc_params.c)
list(APPEND AVUTIL_SOURCES film_grain_params.c)
list(APPEND AVUTIL_SOURCES timecode.c)

add_library(avutils OBJECT ${AVUTIL_SOURCES})
add_library(avutils_static STATIC $<TARGET_OBJECTS:avutils>)

target_link_libraries(avutils PUBLIC ffmpeg_config)

target_compile_definitions(avutils PUBLIC emms_c)

target_include_directories(avutils PUBLIC ${CMAKE_BINARY_DIR}/include)
target_compile_definitions(avutils PRIVATE HAVE_AV_CONFIG_H)
